Changed the fonts and some size fonts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <header class="header">
         <div class="header__container">
           <div class="header__logo">
-            <img src="./images/logo1_2.svg" alt="Logo" />
+            <a href="/index.html"
+              ><img src="./images/logo1_2.svg" alt="Logo"
+            /></a>
           </div>
           <div class="header__body">
             <nav class="header__menu menu">
@@ -53,7 +55,7 @@
                 src="./images/play.svg"
                 alt=""
                 class="main-section__video-link-btn"
-              />Подивіться фільм</a
+              />Подивитися фільм</a
             >
           </div>
           <!-- віводимо поза межи div-у з міткою __contaner, щоб уникнути додавання до цього div відповідних стилей -->
@@ -200,7 +202,9 @@
             >info@rv-cars.com
           </a>
           <div class="footer__logo">
-            <img src="./images/logo1_2.svg" alt="Logo" />
+            <a href="/index.html"
+              ><img src="./images/logo1_2.svg" alt="Logo"
+            /></a>
           </div>
           <ul class="footer__menu menu__footer">
             <li class="menu__foote__item">
