removed padding in footer
 and changed some text in main-section__title

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="main-section__content">
               <div class="main-section__label">Будинки на колесах</div>
               <h1 class="main-section__title title">
-                Придбання будинку на колесах - це вкладення у свободу та
+                Придбання будинку на колесах - це інвестиції у свободу та
                 незалежність.
               </h1>
             </div>
